# DooD

./: .gitignore  .pylintrc  LICENSE  README.md  beval.sh  bexp.sh  btrain.sh  classify.py  environment.yml  eval_clf.csv  eval_mll.csv  eval_result.csv  execute.sh  exp_dict.py  losses.py  mws.py  plot.py  pyproject.toml  run.py  run_air_test.py  run_bl_param_search.py  run_ci_checks.sh  run_lite.py  slurm-23810940.out  slurm-23901711.out  sweep.py  test.py  test_pl.py  train.py  util.py  util_lite.py
.github/workflows/: ci.yml
.tensorboard-info/: pid-50230.info  pid-51264.info  pid-52469.info  pid-60612.info
data/: cluster.py  multimnist.py  oneshot_omniglot.py  synthetic.py
models/: air.py  air_mlp.py  base.py  sequential.py  sequential_backup.py  sequential_mlp.py  ssp.py  ssp_mlp.py  ssp_mlp_backup.py  template.py  vae.py
results/metrics/: eval_clf.csv
scripts/slurm/: beval.sh  bexp.sh  btrain.sh  execute.sh
splinesketch/code/: bezier.py  model.py  robust_splines_sklearn.py  spline_scratch.py  stroke_test.py  stroke_test2.py  test_conv.py
splinesketch/notes/: notes-damien.txt
splinesketch/paper/: paper.bib  paper.tex  sketchsynth.drawio  sketchsynth0.drawio
src/dood/: __init__.py  classify.py  evaluate.py  exp_dict.py  losses.py  mws.py  plot.py  run.py  run_air_experiments.py  run_air_test.py  run_bl_param_search.py  sweep.py  train.py  util.py
src/dood/datasets/: __init__.py  cluster.py  multimnist.py  oneshot_omniglot.py  synthetic.py
src/dood/models/: __init__.py  air.py  air_mlp.py  base.py  ssp.py  ssp_mlp.py  template.py  vae.py
src/dood/splines/: __init__.py  bezier.py  model.py  robust_splines_sklearn.py
tests/: test_smoke.py
