[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dood"
version = "0.1.0"
description = "Drawing out of Distribution — neuro-symbolic generative model of stroke-based drawing (NeurIPS 2022)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yichao Liang" },
]
license = { text = "MIT" }
dependencies = [
    "einops",
    "kornia",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tensorboard",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dood = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["venv/*", ".venv/*", "build/*"]

# Treat heavy third-party libraries as opaque (Any). Their type stubs tend
# to over-constrain and fire on patterns this codebase uses freely.
[[tool.mypy.overrides]]
module = [
    "einops.*",
    "ignite.*",
    "kornia.*",
    "matplotlib.*",
    "numpy.*",
    "pandas.*",
    "PIL.*",
    "scipy.*",
    "seaborn.*",
    "skimage.*",
    "sklearn.*",
    "sklearn_extra.*",
    "tensorboard.*",
    "torch.*",
    "torchvision.*",
    "tqdm.*",
]
follow_imports = "skip"
